# SparkAssistant

./: CMakeLists.txt  Makefile
assets/: rc_resources.py
cmake/: SparkDesktopMacros.cmake  SparkFindQt5Config.cmake  SparkInstallMacrosConfig.cmake  package-deb.descript  spark-desktop.desktop.in
